[NOISSUE] - minor bugfix, add support for non-mnemonic based accounts and transaction - custom address and private keys
