# src/api/ethRouter.js
@@ -2,7 +2,7 @@ const express = require('express');
 const Web3 = require('web3');
 const BigNumber = require('bignumber.js');
 const {
-  cancelWithdrawal, storeWithdrawal, broadcast, deployErc20, broadcastErc20, storeErc20Address,
+  cancelWithdrawal, storeWithdrawal, broadcast, deployErc20, broadcastEth,
 } = require('../service/coreService');
 
 const router = express.Router();
@@ -15,7 +15,7 @@ const {
   INFURA_KEY, ETH, ROPSTEN, CONTRACT_ADDRESSES, CONTRACT_DECIMALS,
 } = require('../constants');
 
-const chain = process.env.API_URL.endsWith('main') ? ETH : ROPSTEN;
+const chain = process.env.API_URL.includes('api-') ? ETH : ROPSTEN;
 
 router.get('/wallet', (_, res) => {
   const mnemonic = commonService.generateMnemonic();
@@ -38,12 +38,21 @@ router.post('/wallet/xpriv', ({body}, res) => {
 
 router.post('/transfer', async ({body, headers}, res) => {
   const {
-    mnemonic, index, ...withdrawal
+    mnemonic, index, privateKey, ...withdrawal
   } = body;
   const {amount, address, currency} = withdrawal;
 
-  const i = parseInt(index);
-  const fromPriv = ethService.calculatePrivateKey(chain, mnemonic, i);
+  let fromPriv;
+  if (mnemonic && index) {
+    const i = parseInt(index);
+    fromPriv = mnemonic && index ? ethService.calculatePrivateKey(chain, mnemonic, i) : privateKey;
+  } else if (privateKey) {
+    fromPriv = privateKey;
+  } else {
+    res.status(400).json({error: 'Either mnemonic or private key must be present.', code: 'private.mnemonic.missing'});
+    return;
+  }
+
   const web3 = new Web3(`https://${chain}.infura.io/v3/${INFURA_KEY}`);
   web3.eth.accounts.wallet.add(fromPriv);
   web3.eth.defaultAccount = web3.eth.accounts.wallet[0].address;
@@ -55,7 +64,7 @@ router.post('/transfer', async ({body, headers}, res) => {
       from: 0,
       to: address.trim(),
       value: web3.utils.toWei(`${amount}`, 'ether'),
-      gasPrice: web3.utils.toWei('1', 'wei'),
+      gasPrice: web3.utils.toWei('10', 'gwei'),
     };
   } else {
     if (!Object.keys(CONTRACT_ADDRESSES).includes(currency)) {
@@ -71,7 +80,7 @@ router.post('/transfer', async ({body, headers}, res) => {
       from: 0,
       to: CONTRACT_ADDRESSES[currency],
       data: contract.methods.transfer(address.trim(), new BigNumber(amount).multipliedBy(10).pow(CONTRACT_DECIMALS[currency]).toString(16)).encodeABI(),
-      gasPrice: web3.utils.toWei('1', 'wei'),
+      gasPrice: web3.utils.toWei('10', 'gwei'),
     };
   }
 
@@ -124,18 +133,27 @@ router.post('/transfer', async ({body, headers}, res) => {
 
 router.post('/erc20/deploy', async ({body, headers}, res) => {
   const {
-    mnemonic, payIndex, ...erc20
+    mnemonic, payIndex, privateKey, ...erc20
   } = body;
-  const {name} = erc20;
 
-  const i = parseInt(payIndex);
-  const fromPriv = ethService.calculatePrivateKey(chain, mnemonic, i);
+  let fromPriv;
+  if (mnemonic && payIndex) {
+    const i = parseInt(payIndex);
+    fromPriv = mnemonic && payIndex ? ethService.calculatePrivateKey(chain, mnemonic, i) : privateKey;
+  } else if (privateKey) {
+    fromPriv = privateKey;
+  } else {
+    res.status(400).json({error: 'Either mnemonic or private key must be present.', code: 'private.mnemonic.missing'});
+    return;
+  }
   const web3 = new Web3(`https://${chain}.infura.io/v3/${INFURA_KEY}`);
   web3.eth.accounts.wallet.add(fromPriv);
   web3.eth.defaultAccount = web3.eth.accounts.wallet[0].address;
 
   erc20.chain = 'ETH';
-  erc20.xpub = ethService.generateWallet(chain, mnemonic).xpub;
+  if (mnemonic) {
+    erc20.xpub = ethService.generateWallet(chain, mnemonic).xpub;
+  }
 
   let response;
   try {
@@ -178,7 +196,7 @@ router.post('/erc20/deploy', async ({body, headers}, res) => {
     txData = await web3.eth.accounts.signTransaction({
       from: 0,
       gasLimit,
-      gasPrice: web3.utils.toWei('1', 'wei'),
+      gasPrice: web3.utils.toWei('10', 'gwei'),
       data: deploy.encodeABI(),
     }, fromPriv);
   } catch (e) {
@@ -190,31 +208,48 @@ router.post('/erc20/deploy', async ({body, headers}, res) => {
     return;
   }
 
-  web3.eth.sendSignedTransaction(txData.rawTransaction)
-    .once('receipt', async (receipt) => {
-      try {
-        await storeErc20Address(name, receipt.contractAddress, {
-          transactionHash: receipt.transactionHash,
-          contractAddress: receipt.contractAddress,
-          ...response.data,
-        }, res, headers);
-      } catch (_) {
-      }
-    })
-    .on('error', e => res.status(400).json({
-      code: 'ethereum.erc20.broadcast.failed',
-      message: `Unable to broadcast transaction due to ${e.message}`,
-    }));
+  try {
+    await broadcastEth({
+      txData: txData.rawTransaction,
+    }, res, headers);
+  } catch (_) {
+  }
+  // When we want to wait for contract creation, we can use this method - with gas big enough, it will be processed quickly
+
+  // const {name} = erc20;
+  // web3.eth.sendSignedTransaction(txData.rawTransaction)
+  //   .once('receipt', async (receipt) => {
+  //     try {
+  //       await storeErc20Address(name, receipt.contractAddress, {
+  //         transactionHash: receipt.transactionHash,
+  //         contractAddress: receipt.contractAddress,
+  //         ...response.data,
+  //       }, res, headers);
+  //     } catch (_) {
+  //     }
+  //   })
+  //   .on('error', e => res.status(400).json({
+  //     code: 'ethereum.erc20.broadcast.failed',
+  //     message: `Unable to broadcast transaction due to ${e.message}`,
+  //   }));
 });
 
 router.post('/erc20/transfer', async ({body, headers}, res) => {
   const {
-    mnemonic, index, tokenAddress, ...withdrawal
+    mnemonic, index, tokenAddress, privateKey, ...withdrawal
   } = body;
   const {amount, address, currency} = withdrawal;
 
-  const i = parseInt(index);
-  const fromPriv = ethService.calculatePrivateKey(chain, mnemonic, i);
+  let fromPriv;
+  if (mnemonic && index) {
+    const i = parseInt(index);
+    fromPriv = mnemonic && index ? ethService.calculatePrivateKey(chain, mnemonic, i) : privateKey;
+  } else if (privateKey) {
+    fromPriv = privateKey;
+  } else {
+    res.status(400).json({error: 'Either mnemonic or private key must be present.', code: 'private.mnemonic.missing'});
+    return;
+  }
   const web3 = new Web3(`https://${chain}.infura.io/v3/${INFURA_KEY}`);
   web3.eth.accounts.wallet.add(fromPriv);
   web3.eth.defaultAccount = web3.eth.accounts.wallet[0].address;
@@ -225,7 +260,7 @@ router.post('/erc20/transfer', async ({body, headers}, res) => {
     from: 0,
     to: tokenAddress.trim(),
     data: contract.methods.transfer(address.trim(), `0x${new BigNumber(amount).multipliedBy(new BigNumber(10).pow(18)).toString(16)}`).encodeABI(),
-    gasPrice: web3.utils.toWei('1', 'wei'),
+    gasPrice: web3.utils.toWei('10', 'gwei'),
   };
 
   let gasLimit;
